@@ -1,6 +1,5 @@
 package com.nhoryzon.mc.farmersdelight.block;
 
-import com.google.common.collect.ImmutableSet;
 import com.nhoryzon.mc.farmersdelight.util.BlockStateUtils;
 import net.fabricmc.fabric.api.object.builder.v1.block.FabricBlockSettings;
 import net.minecraft.block.Block;
@@ -20,7 +19,8 @@ import java.util.Random;
 import java.util.Set;
 
 public class WildPatchBlock extends PlantBlock implements Fertilizable {
-    public static final Set<Block> PLANT_ON_LIST = ImmutableSet.of(Blocks.DIRT, Blocks.GRASS_BLOCK, Blocks.SAND, Blocks.RED_SAND);
+
+    public static final Set<Block> PLANT_ON_LIST = Set.of(Blocks.DIRT, Blocks.GRASS_BLOCK, Blocks.SAND, Blocks.RED_SAND);
 
     protected static final VoxelShape SHAPE = Block.createCuboidShape(2.d, .0d, 2.d, 14.d, 13.d, 14.d);
 
@@ -87,4 +87,5 @@ public class WildPatchBlock extends PlantBlock implements Fertilizable {
     public VoxelShape getOutlineShape(BlockState state, BlockView world, BlockPos pos, ShapeContext context) {
         return SHAPE;
     }
+
 }
